--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
-    "mqtt": "^4.3.7"
+    "mqtt": "^4.3.7",
+    "node-fetch": "^2.6.8"
   }
 }
